# Qw36-FileMove

./: .gitignore  AGENTS.md  CMakeLists.txt  build.ps1  test_error2.txt  test_output.txt  test_output2.txt  test_output3.txt
docs/: BUILDING.md  IMPLEMENTATION.md  PROGRESS.md  TESTING.md  USER_GUIDE.md
resources/: FileMove.rc.in  GenerateRc.cmake
specs/: FileMove-mockups-v1.2.0.md  FileMove-mockups-v1.3.0.md  FileMove-mockups-v1.3.1.md  FileMove-spec-v1.2.0.md  FileMove-spec-v1.3.0.md  FileMove-spec-v1.3.1.md
src/: main.cpp
src/data/: file_io.cpp  file_io.h  json_parser.cpp  json_parser.h
src/drag_drop/: drop_target.cpp  drop_target.h
src/queue/: queue_manager.cpp  queue_manager.h  worker_thread.cpp  worker_thread.h
src/resources/: resource_ids.h  resource_loader.cpp  resource_loader.h
src/utils/: cmdline_parser.cpp  cmdline_parser.h  logging.cpp  logging.h
src/window/: group_list.cpp  group_list.h  main_window.cpp  main_window.h
src/window/dialogs/: about.cpp  about.h  conflict_dialog.cpp  conflict_dialog.h  group_editor.cpp  group_editor.h  new_file.cpp  new_file.h  queue_window.cpp  queue_window.h  search.cpp  search.h  settings.cpp  settings.h  status.cpp  status.h
tests/: test_harness.cpp
